# cellular_raza-template-pyo3

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: docs.yml
cellular_raza_template_pyo3/: __init__.py  cellular_raza_template_pyo3.pyi
docs/: conf.py  index.rst
examples/: basic.py
src/: lib.rs  main.rs
