[package]
name = "cellular_raza-template-pyo3"
version = "0.1.0"
edition = "2021"
authors = ["Jonas Pleyer <jonas.pleyer@fdm.uni-freiburg.de>"]

[dependencies]
serde = "1.0.197"
rand = "0.8.5"
rand_chacha = "0.3.1"
cellular_raza = { git="https://github.com/jonaspleyer/cellular_raza/", rev="bc145831143db93d136bee5b8c9a0f5b1a54dfae" }
nalgebra = "0.32.4"
rayon = "1.9.0"
num.workspace = true

