[package]
name = "cellular_raza-template-pyo3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "cellular_raza_template_pyo3"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.197"
rand = "0.8.5"
rand_chacha = "0.3.1"
cellular_raza = { version = "0.2", features = ["pyo3"]}
nalgebra = "0.33"
rayon = "1.9.0"
num = "0.4"
pyo3 = "0.22"
